# XDF

./: .gitignore  .prospector.yaml  README.md  poetry.toml  pyproject-setuptools.toml  pyproject.toml  setup.cfg
metadata/: classifiers  description
metadata/requirements/: dev.txt  publish.txt
src/xdf/: __init__.py
