[tool.poetry]
name = 'XDF'
version = '0.0.0.dev0'

description = 'Data Frames / Data Feeders with high-level abstractions for key tasks in AI applications'

license = 'MIT'

authors = [
  'STEAM for Vietnam Foundation AI & Robotics Educational Initiative <Edu.AI@STEAMforVietNam.org>'
]
maintainers = [
  'STEAM for Vietnam Foundation AI & Robotics Educational Initiative <Edu.AI@STEAMforVietNam.org>'
]

readme = 'README.md'

homepage = 'https://GitHub.com/Django-AI/XDF'
repository = 'https://GitHub.com/Django-AI/XDF'
documentation = 'https://Django-AI.GitHub.io/XDF'

keywords = [
  'data frame',
  'data feeder',

  'Artificial Intelligence',
  'A.I.',
  'AI',

  'application',
  'app',
]

classifiers = [
  'Development Status :: 3 - Alpha',
  # 'Development Status :: 4 - Beta',
  # 'Development Status :: 5 - Production/Stable',
  # 'Development Status :: 6 - Mature',
  'Environment :: MacOS X',
  'Environment :: Win32 (MS Windows)',
  'Framework :: Dash',
  'Framework :: Django',
  'Framework :: Django :: 4.0',
  'Framework :: IPython',
  'Framework :: Jupyter',
  'Framework :: Jupyter :: JupyterLab',
  'Framework :: Jupyter :: JupyterLab :: 4',
  'Framework :: Kedro',
  'Framework :: Matplotlib',
  'Intended Audience :: Developers',
  'Intended Audience :: Education',
  'Intended Audience :: Financial and Insurance Industry',
  'Intended Audience :: Healthcare Industry',
  'Intended Audience :: Information Technology',
  'Intended Audience :: Legal Industry',
  'Intended Audience :: Manufacturing',
  'Intended Audience :: Science/Research',
  'Intended Audience :: System Administrators',
  'Intended Audience :: Telecommunications Industry',
  'Operating System :: MacOS',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Microsoft :: Windows :: Windows 7',
  'Operating System :: Microsoft :: Windows :: Windows 8',
  'Operating System :: Microsoft :: Windows :: Windows 8.1',
  'Operating System :: Microsoft :: Windows :: Windows 10',
  'Operating System :: OS Independent',
  'Operating System :: Other OS',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Education',
  'Topic :: Home Automation',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Astronomy',
  'Topic :: Scientific/Engineering :: Atmospheric Science',
  'Topic :: Scientific/Engineering :: Bio-Informatics',
  'Topic :: Scientific/Engineering :: Chemistry',
  'Topic :: Scientific/Engineering :: GIS',
  'Topic :: Scientific/Engineering :: Human Machine Interfaces',
  'Topic :: Scientific/Engineering :: Hydrology',
  'Topic :: Scientific/Engineering :: Image Processing',
  'Topic :: Scientific/Engineering :: Image Recognition',
  'Topic :: Scientific/Engineering :: Information Analysis',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Medical Science Apps.',
  'Topic :: Scientific/Engineering :: Physics',
  'Topic :: Scientific/Engineering :: Visualization',
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries',
  'Topic :: Software Development :: Libraries :: Application Frameworks',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Software Development :: User Interfaces',
  'Topic :: Software Development :: Widget Sets',
]

packages = [
  {include = 'xdf', from = 'src'}
]

include = []
exclude = []


[tool.poetry.dependencies]

# PYTHON
# ======
Python = '^3.8'


[tool.poetry.urls]
GitHub = 'https://GitHub.com/Django-AI/XDF'


[build-system]
requires = [
  'Poetry-Core >= 1.0.7'
]
build-backend = 'poetry.core.masonry.api'
